syntax = "proto3";

package io.restorecommerce.product_prototype;

import "io/restorecommerce/resource_base.proto";
import "io/restorecommerce/meta.proto";
import "io/restorecommerce/auth.proto";
import "io/restorecommerce/status.proto";
import "io/restorecommerce/options.proto";

// ProductPrototype resource
message ProductPrototype {
  optional string id = 1;
  optional io.restorecommerce.meta.Meta meta = 2;
  optional string name = 3;
  optional string version = 4;
  optional string description = 5;
  optional string category_id = 6;
}

message ProductPrototypeList {
  repeated ProductPrototype items = 1;
  optional uint32 total_count = 2;
  io.restorecommerce.auth.Subject subject = 3;
}

message ProductPrototypeListResponse {
  repeated ProductPrototypeResponse items = 1;
  uint32 total_count = 2;
  io.restorecommerce.status.OperationStatus operation_status = 3;
}

message ProductPrototypeResponse {
  ProductPrototype payload = 1;
  io.restorecommerce.status.Status status = 2;
}

message Deleted {
  string id = 1;
}

service ProductPrototypeService {
  option (io.restorecommerce.options.service_name) = "product_prototype";

  rpc Read (io.restorecommerce.resourcebase.ReadRequest) returns (ProductPrototypeListResponse) {
    option (io.restorecommerce.options.is_query) = true;
  };
  rpc Create (ProductPrototypeList) returns (ProductPrototypeListResponse);
  rpc Delete (io.restorecommerce.resourcebase.DeleteRequest) returns (io.restorecommerce.resourcebase.DeleteResponse);
  rpc Update (ProductPrototypeList) returns (ProductPrototypeListResponse);
  rpc Upsert (ProductPrototypeList) returns (ProductPrototypeListResponse);
}
